include_HEADERS = radius.h

lib_LIBRARIES = libradius-engine.a
libradius_engine_a_SOURCES = r_audio.c r_audio_clip_cache.c r_color.c r_element.c r_element_list.c r_entity.c r_entity_list.c r_event.c r_event_keys.c r_file.c r_file_internal.c r_file_system.c r_image_cache.c r_layer.c r_layer_stack.c r_list.c r_log.c r_matrix.c r_object.c r_object_enum.c r_object_list.c r_object_ref.c r_platform.c r_resource_cache.c r_script.c r_script_lib.c r_state.c r_string.c r_string_buffer.c r_vector.c r_video.c r_video_font.c r_zlist.c radius.c r_assert.h r_audio.h r_audio_clip_cache.h r_color.h r_defs.h r_element.h r_element_list.h r_entity.h r_entity_list.h r_event.h r_event_keys.h r_file.h r_file_internal.h r_file_system.h r_image_cache.h r_layer.h r_layer_stack.h r_list.h r_log.h r_matrix.h r_object.h r_object_enum.h r_object_list.h r_object_ref.h r_platform.h r_platform_unix.h r_resource_cache.h r_script.h r_state.h r_string.h r_string_buffer.h r_vector.h r_video.h r_zlist.h radius.h
dist_noinst_HEADERS = r_platform_windows.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = radius-engine.pc

